# NeuroCorrelation

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENCE  NeuCor.cpp  NeuCor.h  NeuCor_Renderer.cpp  NeuCor_Renderer.cpp.save-failed  NeuCor_Renderer.h  NeuroCorrelation.cbp  NeuroCorrelation.depend  NeuroCorrelation.layout  README.md  charge_passive_model.xlsx  imgui_impl_glfw_gl3.cpp  main.cpp  neuron.Fshader  neuron.shader  synapse.Fshader  synapse.shader
imgui/: imgui_impl_glfw_gl3.cpp
picopng/: picopng.cpp
resources/: neuron.Fshader  neuron.shader  synapse.Fshader
src/: NeuCor.cpp  NeuCor.h  NeuCor_GL.h  NeuCor_Renderer.cpp  NeuCor_Renderer.h  imgui_impl_glfw_gl3.cpp  main.cpp
web/: package-lock.json  package.json
web/docker/: Dockerfile
web/example/: index.html  package.json
web/example/src/: main.js  style.css
web/package/: index.mjs  package.json
web/scripts/: build_wasm.sh
